--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
+<style>
+header{
+    color: aqua;
+    font-family: Comic Sans Ms;
+}
+</style>
+
 <h1>Hello There</h1>
 <p>This is a really cool process</p>
+<h2>This is my second try</h2>
