--- a/webring.html
+++ b/webring.html
@@ -1,2 +1,13 @@
-<h1>This is Eli's Webring</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>repl.it</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <h1>This is Eli's Webring</h1>
 <a href="rpatel63.github.io/webring.html>Heres Raj's Webring</a>
+  </body>
+</html>
