--- a/webring.html
+++ b/webring.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h1>This is Eli's Webring</h1>
-<a href="rpatel63.github.io/webring.html>Heres Raj's Webring</a>
+<a href="https//:rpatel63webring.html/webring.html">Heres Raj's Webring</a>
   </body>
 </html>
