--- a/webring.html
+++ b/webring.html
@@ -7,7 +7,9 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <script src="script.js"></script>
     <h1>This is Eli's Webring</h1>
-<a href="https//:rpatel63webring.html/webring.html">Heres Raj's Webring</a>
+<p><a href="https://rpatel63.github.io/webring.html">Heres Raj's Webring</a></p>
+<p><a href="https://gmoore2001.github.io/webring.html">Heres Gavin's Webring</a></p>
   </body>
 </html>
