--- a/webring.html
+++ b/webring.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Webringt</title>
+    <title>Webring</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <link rel="icon" href="remyLogo.png" type="image.png">
+    <link rel="icon" href="https://edog1313.github.io/remyLogo.png" type="image.png">
   </head>
   <body>
     <script src="script.js"></script>
