--- a/webring.html
+++ b/webring.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Webring</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <link rel="icon" href="edog1313.github.io/remyLogo.png" type="image.png">
+    <link rel="icon" src="remyLogo.png" type="image.png">
   </head>
   <body>
     <script src="script.js"></script>
