--- a/webring.html
+++ b/webring.html
@@ -10,7 +10,7 @@
   <body>
     <script src="script.js"></script>
     <h1>This is Eli's Webring</h1>
-<p><a href="https://rpatel63.github.io/rpatel63.github.io/webring.html">Heres Raj's Webring</a></p>
+<p><a href="https://rajpatel63.github.io/rpatel63.github.io/webring.html">Heres Raj's Webring</a></p>
 <p><a href="https://gmoore2001.github.io/webring.html">Heres Gavin's Webring</a></p>
   </body>
 </html>
