--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -26,13 +26,14 @@
 				<p><a href="aboutmepage.html" target="blank">About Me</a></p>
 			</div>
 			<div>
-				<p><a href="https://Top-10-Website.eliremington.repl.co" target="blank">Top 10</a></p>
+				<p><a href="https://Edog1313.github.io/Top-10-Website/index.html" target="blank">Top 10</a></p>
 			</div>
 			<div>
-				<p><a href="https://gridpagetop10.eliremington.repl.co/" target="blank">GridPage</a></p>
+				<p><a href="https://edog1313.github.io/GridPageTop10/index.html" target="blank">GridPage</a></p>
 			</div>
 			<div>
-				<p><a href="https://FlexBoxTop10--eliremington.repl.co" target="blank">FlexBox</a></p>
+				<p><a href="https://Edog1313.github.io/FlexBoxTop10/index.html
+" target="blank">FlexBox</a></p>
 			</div>
 		</div>
 
@@ -49,7 +50,7 @@
       </div>
       <div class="flex-content-row-2">
 				<div class="flex-content-4"> <p class="text">Some profound text goes here</p></div>
-				<div class="flex-content-5"> <p class="text">Second Row</p></div>
+				<div class="flex-content-5"> <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque laoreet suspendisse interdum consectetur.</p></div>
 				<div class="flex-content-6"> <p class="text">This is also a place for anythiing</p></div>
 
 
