--- a/Portfolio/aboutmepage.html
+++ b/Portfolio/aboutmepage.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>repl.it</title>
+	<title>About Me</title>
 	<link href="aboutmepage.css" rel="stylesheet" type="text/css" />
 	<link rel="icon" href="remyLogo.png" type="image.png">
 </head>
