--- a/Portfolio/aboutmepage.html
+++ b/Portfolio/aboutmepage.html
@@ -25,7 +25,7 @@
 		<div class="flex-nav">
 
 			<div>
-				<p><a href="https://portfolio.eliremington.repl.co/" target="blank">Homepage</a></p>
+				<p><a href="https://portfolio.eliremington.repl.co/">Homepage</a></p>
 			</div>
 
 			<div>
