--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -23,7 +23,7 @@
 	<div class="flex-main">
 		<div class="flex-nav">
 			<div>
-				<p><a href="aboutmepage.html" target="blank">About Me</a></p>
+				<p><a href="aboutmepage.html">About Me</a></p>
 			</div>
 			<div>
 				<p><a href="https://Edog1313.github.io/Top-10-Website/index.html" target="blank">Top 10</a></p>
