--- a/Bootstrap-Top-10-Website/index.html
+++ b/Bootstrap-Top-10-Website/index.html
@@ -5,7 +5,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>repl.it</title>
-	<link href="/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css" />
+	<link href="Bootstrap-Top-10-Website
+/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
